# Neural-Networks_V2

./: CMakeLists.txt  Neural Networks.sln  README.md  imgui.ini
Neural Networks/: CMakeLists.txt  Neural Networks.vcxproj  Neural Networks.vcxproj.filters  WayPoint.ixx  exec  imgui.ini  myprogram
Neural Networks/src/: AIEntity.hpp  AIEntity.ixx  Math.hpp  NeuralNet.hpp  NeuralNet.ixx  Neuron.hpp  Simulation.hpp  Source.cpp  global.hpp
img/: 0.pxo  wall.pxo
src/: AIEntity.hpp  NeuralNet.hpp  Simulation.hpp  Source.cpp
